--- a/kubernetes/deployment-django-ver1.yaml
+++ b/kubernetes/deployment-django-ver1.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: django-app
-        image: docker.io/library/jango_app:latest
+        image: docker.io/library/django_app:latest
         imagePullPolicy: Never
         envFrom:
           - configMapRef:
@@ -32,4 +32,4 @@ spec:
   ports:
     - port: 80
       targetPort: 80
-  type: NodePort
+  type: ClusterIP
