--- a/kubernetes/clearsession.yaml
+++ b/kubernetes/clearsession.yaml
@@ -4,8 +4,12 @@ metadata:
   name: django-clearsessions
 spec:
   schedule: "* * * * *"
+  successfulJobsHistoryLimit: 2
+  failedJobsHistoryLimit: 1
+  startingDeadlineSeconds: 30
   jobTemplate:
     spec:
+      ttlSecondsAfterFinished: 100
       template:
         spec:
           restartPolicy: OnFailure
