--- a/deploy/yc-sirius/edu-sleepy-engelbart/yandex-root-ca-crt-secret.yaml
+++ b/deploy/yc-sirius/edu-sleepy-engelbart/yandex-root-ca-crt-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: yandex-root-ca-crt-secret
 type: Opaque
 stringData:
-  yandex-root-ca-crt-key:
+  root.crt:
     -----BEGIN CERTIFICATE-----
     MIIE3TCCAsWgAwIBAgIKPxb5sAAAAAAAFzANBgkqhkiG9w0BAQ0FADAfMR0wGwYD
     VQQDExRZYW5kZXhJbnRlcm5hbFJvb3RDQTAeFw0xNzA2MjAxNjQ0MzdaFw0yNzA2
