add README to dev section, some minor fixes

--- a/deploy/yc-sirius/edu-sleepy-engelbart/migrate.yaml
+++ b/deploy/yc-sirius/edu-sleepy-engelbart/migrate.yaml
@@ -15,6 +15,10 @@ spec:
             name: django-config
         - secretRef:
             name: django-secret
-        - secretRef:
-            name: postgres
+        env:
+          - name: DATABASE_URL
+            valueFrom:
+              secretKeyRef:
+                name: postgres
+                key: dsn
         command: ['python', 'manage.py', 'migrate', '--noinput']
