--- a/deploy/yc-sirius/edu-sleepy-engelbart/service_django.yaml
+++ b/deploy/yc-sirius/edu-sleepy-engelbart/service_django.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: service-nginx
+  name: service-django
 spec:
   selector:
-    app: nginx
+    app: django-app
   ports:
     - port: 80
       targetPort: 80
